Presentación del examen

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,2 +1,16 @@
 /* @VARIABLES */
 /* ********** */
+
+/* COLORES */
+$gris : #C4C4C4;
+$beach : #F8F6EE;
+$marron : #FFE6D1;
+$naranja : #F2624A;
+
+/* BORDERS */
+$btnrradius : 0px 50px 50px 0px;
+
+/* TIPOGRAFIA */
+$normalsize : 1.125rem;
+$titlesize : 3.875rem;
+$parrafosize : 1rem;
