--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,2 +1,27 @@
 /* @BOTONES */
+
+.firstbtn {
+    width: 8rem;
+    height: 3.125rem;
+    background-color: $naranja;
+    border: none;
+    color: #FFFFFF;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: $normalsize;
+    font-weight: 400;
+}
+
+.firstcontainer_button {
+    border-radius: $btnrradius;
+    width: 18.5rem;
+    text-align: left;
+}
+
+.btnoticias {
+    border-radius: 25px;
+    width: 20.5rem;
+    margin-top: 0.25rem;
+    text-align: center;
+}
+
 /* ********** */
