--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,2 +1,30 @@
 /* @FOOTER */
+footer {
+    background: $gris;
+    padding: 1rem;
+}
+
+li {
+    list-style-type: none;
+    margin: 1rem;
+}
+
+.footer_input {
+    width: 20.5rem;
+    height: 3.125rem;
+    color: $gris;
+    border: none;
+    padding: 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 2rem;
+}
+
+.section_copy {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    margin-top: 1.5rem;
+}
 /* ********** */
