--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,2 +1,73 @@
 /* @HEADERS */
+@media only screen and (max-width: 360px) {
+    .header_sectionbtn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 0.65rem;
+    }
+    
+    .header_nav {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin-top: 1.25rem;
+    
+    }
+    
+    .a_nav {
+        display: block;
+        margin: 0.4rem;
+        list-style-type: none;
+        background-color: $marron;
+        text-align: center;
+        padding: 1rem;
+        font-family: Arial, Helvetica, sans-serif;
+        color: black;
+        font-weight: 400;
+        width: 20rem;
+    }
+
+    .inicio {
+        display: none;
+    }
+  }
+
+@media only screen and (min-width: 400px) {
+    .section_header  {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row-reverse;
+        padding: 1.5rem;
+    }
+    .header_sectionbtn {
+        position: absolute;
+        right: 0;
+        margin-right: 1rem;
+    }
+    .btndesktop {
+        font-size: 1rem;
+        width: 7.2rem;
+        height: 2.3rem;
+    }
+
+    .a_nav {
+        margin: 1rem;
+        color: black;
+        text-decoration: none;
+        outline: none;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 400;
+        font-size: $normalsize;
+    }
+  }
+
+  .inicio {
+      color: $naranja;
+  }
+
+
+  
 /* ********** */
